--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "qa-task-cocus",
   "scripts": {
-    "test": "cypress open"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "author": "Jeremiah Hukpati",
   "license": "ISC",
